[gd_scene load_steps=11 format=3 uid="uid://dvihe5bwamex7"]

[ext_resource type="Texture2D" uid="uid://kc6q6ikbkegv" path="res://sprites/floor_1.jpg" id="1_b545p"]
[ext_resource type="Script" path="res://scripts/sound_manager.gd" id="1_hjijg"]
[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_irc5a"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_rlksj"]
[ext_resource type="PackedScene" uid="uid://bg3jhepeqaqn1" path="res://scenes/player.tscn" id="2_gkc74"]
[ext_resource type="PackedScene" uid="uid://b51lbdgysvfq1" path="res://scenes/enemy_standard.tscn" id="3_6vcwx"]
[ext_resource type="Script" path="res://scripts/score_text.gd" id="6_86sgh"]
[ext_resource type="Script" path="res://scenes/bullet_destroyers.gd" id="8_o2mvc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4173a"]
size = Vector2(40.5, 701)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5iijj"]
size = Vector2(1195, 32)

[node name="World" type="Node2D"]
script = ExtResource("1_rlksj")

[node name="SoundManager" type="Node" parent="."]
script = ExtResource("1_hjijg")

[node name="EnemySpawner" type="Node" parent="." node_paths=PackedStringArray("world")]
script = ExtResource("1_irc5a")
world = NodePath("..")
enemy_standard_scene = ExtResource("3_6vcwx")
spawn_time = 1.0
spawn_inc_time = 10.0

[node name="Ground" type="TextureRect" parent="."]
offset_right = 11550.0
offset_bottom = 6700.0
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_b545p")
stretch_mode = 1

[node name="Player" parent="." instance=ExtResource("2_gkc74")]
position = Vector2(575, 350)
shot_time = 0.05

[node name="ScoreText" type="RichTextLabel" parent="."]
offset_right = 199.0
offset_bottom = 40.0
text = "Points: 0
"
script = ExtResource("6_86sgh")

[node name="GUI" type="Node" parent="."]

[node name="BulletDestroyers" type="Node" parent="." node_paths=PackedStringArray("destroyers")]
script = ExtResource("8_o2mvc")
destroyers = [NodePath("Area2D"), NodePath("Area2D2"), NodePath("Area2D3"), NodePath("Area2D4")]

[node name="Area2D" type="Area2D" parent="BulletDestroyers"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDestroyers/Area2D"]
position = Vector2(-24, 325)
shape = SubResource("RectangleShape2D_4173a")

[node name="Area2D2" type="Area2D" parent="BulletDestroyers"]
position = Vector2(1187, 2)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDestroyers/Area2D2"]
position = Vector2(-3, 331.5)
shape = SubResource("RectangleShape2D_4173a")

[node name="Area2D3" type="Area2D" parent="BulletDestroyers"]
position = Vector2(590, -331)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDestroyers/Area2D3"]
position = Vector2(-12, 303)
shape = SubResource("RectangleShape2D_5iijj")

[node name="Area2D4" type="Area2D" parent="BulletDestroyers"]
position = Vector2(590, 348)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDestroyers/Area2D4"]
position = Vector2(-16, 333)
shape = SubResource("RectangleShape2D_5iijj")
